--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 rich>=10.14.0,<14.0.0  # Force compatible version for Streamlit
 streamlit>=1.28.0
 ultralytics>=8.1.0
-
+opencv-python-headless>=4.5.0
 numpy
 pandas
 pillow
